# Rendering

./: BufferLock.cpp  BufferObject.cpp  BufferObject.h  BufferView.cpp  BufferView.h  CMakeLists.txt  Draw.cpp  Draw.h  DrawCompound.cpp  DrawCompound.h  FBO.cpp  FBO.h  GLHeader.h  Helper.cpp  Helper.h  OcclusionQuery.cpp  OcclusionQuery.h  PBO.cpp  PBO.h  PipelineBuilder.cpp  PipelineBuilder.h  QueryObject.cpp  QueryObject.h  RenderDevice.cpp  RenderDevice.h  RenderFrameContext.cpp  RenderFrameContext.h  RenderingConfig.cmake.in  RenderingContext.cpp  RenderingContext.h  StatisticsQuery.cpp  StatisticsQuery.h  TextRenderer.cpp  TextRenderer.h  VAO.cpp  VAO.h  header.txt
Backend/: CMakeLists.txt  VulkanDevice.cpp  VulkanDevice.h
Buffer/: BufferAllocator.h  BufferObject.cpp  BufferObject.h  BufferPool.cpp  BufferPool.h  CMakeLists.txt
CL/: Buffer.cpp  Buffer.h  BufferGL.cpp  BufferGL.h  CLUtils.cpp  CLUtils.h  CommandQueue.cpp  CommandQueue.h  Context.cpp  Context.h  Device.cpp  Device.h  Event.cpp  Event.h  HelperContext.cpp  HelperContext.h  Kernel.cpp  Kernel.h  Platform.cpp  Platform.h  Program.cpp  Program.h  UserEvent.cpp  UserEvent.h
CL/Memory/: Buffer.cpp  Buffer.h  BufferAccessor.cpp  BufferAccessor.h  BufferGL.cpp  BufferGL.h  Image.cpp  Image.h  Memory.cpp  Memory.h  Sampler.cpp  Sampler.h
Context/: CMakeLists.txt  RenderThread.cpp  RenderThread.h  RenderingContext.cpp  RenderingContext.h
Core/: ApiHandles.cpp  ApiHandles.h  BufferStorage.cpp  BufferStorage.h  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Common.cpp  Common.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Device.cpp  Device.h  Fence.cpp  Fence.h  FencedPool.h  ImageFormat.cpp  ImageFormat.h  ImageStorage.cpp  ImageStorage.h  ImageView.cpp  ImageView.h  Pipeline.cpp  Pipeline.h  PipelineCache.cpp  PipelineCache.h  QueryPool.cpp  QueryPool.h  Queue.cpp  Queue.h  ResourceCache.cpp  ResourceCache.h  Sampler.cpp  Sampler.h  (+2 more)
Core/Commands/: BindCommands.cpp  BindCommands.h  CMakeLists.txt  Command.h  CommonCommands.cpp  CommonCommands.h  CopyCommands.cpp  CopyCommands.h  DrawCommands.cpp  DrawCommands.h  DynamicStateCommands.cpp  DynamicStateCommands.h  QueryCommands.cpp  QueryCommands.h
Core/internal/: VkFramebuffer.cpp  VkFramebuffer.h  VkPipeline.cpp  VkPipeline.h  VkUtils.cpp  VkUtils.h
Legacy/: BufferObject.h
Memory/: BufferLock.cpp  BufferLock.h  BufferObject.cpp  BufferObject.h  BufferView.cpp  BufferView.h  StreamBufferView.cpp  StreamBufferView.h
Mesh/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshDataStrategy.cpp  MeshDataStrategy.h  MeshIndexData.cpp  MeshIndexData.h  MeshVertexData.cpp  MeshVertexData.h  VertexAccessor.cpp  VertexAccessor.h  VertexAttribute.cpp  VertexAttribute.h  VertexAttributeAccessors.cpp  VertexAttributeAccessors.h  VertexAttributeIds.cpp  VertexAttributeIds.h  VertexDescription.cpp  VertexDescription.h
MeshUtils/: CMakeLists.txt  ConnectivityAccessor.cpp  ConnectivityAccessor.h  DirectVertexAccessor.cpp  DirectVertexAccessor.h  LocalMeshDataHolder.cpp  LocalMeshDataHolder.h  MarchingCubesMeshBuilder.cpp  MarchingCubesMeshBuilder.h  MeshBuilder.cpp  MeshBuilder.h  MeshUtils.cpp  MeshUtils.h  PlatonicSolids.cpp  PlatonicSolids.h  PrimitiveShapes.cpp  PrimitiveShapes.h  QuadtreeMeshBuilder.cpp  QuadtreeMeshBuilder.h  QuadtreeMeshBuilderDebug.cpp  Simplification.cpp  Simplification.h  StreamMeshDataStrategy.cpp  StreamMeshDataStrategy.h  TriangleAccessor.cpp  TriangleAccessor.h  WireShapes.cpp  WireShapes.h
Queries/: CMakeLists.txt  OcclusionQuery.h  QueryObject.cpp  StatisticsQuery.h
RenderingContext/: BindingState.cpp  BindingState.h  CoreRenderingData.h  ParameterCache.cpp  ParameterCache.h  ParameterStructs.cpp  ParameterStructs.h  PipelineState.cpp  PipelineState.h  ProgramState.cpp  ProgramState.h  RenderingContext.cpp  RenderingContext.h  RenderingData.h  RenderingParameters.cpp  RenderingParameters.h
RenderingContext/internal/: CoreRenderingStatus.h  PipelineState.cpp  PipelineState.h  ProgramState.cpp  ProgramState.h  RenderingStatus.h  StatusHandler_UBO.cpp  StatusHandler_UBO.h  StatusHandler_glCompatibility.cpp  StatusHandler_glCompatibility.h  StatusHandler_glCore.cpp  StatusHandler_glCore.h  StatusHandler_sgUniforms.cpp  StatusHandler_sgUniforms.h
Serialization/: AbstractRenderingStreamer.h  CMakeLists.txt  GenericAttributeSerialization.cpp  GenericAttributeSerialization.h  Serialization.cpp  Serialization.h  StreamerDDS.cpp  StreamerDDS.h  StreamerMD2.cpp  StreamerMD2.h  StreamerMMF.cpp  StreamerMMF.h  StreamerMTL.cpp  StreamerMTL.h  StreamerMVBO.cpp  StreamerMVBO.h  StreamerNGC.cpp  StreamerNGC.h  StreamerOBJ.cpp  StreamerOBJ.h  StreamerPKM.cpp  StreamerPKM.h  StreamerPLY.cpp  StreamerPLY.h  StreamerXYZ.cpp  StreamerXYZ.h
Shader/: CMakeLists.txt  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderObjectInfo.cpp  ShaderObjectInfo.h  ShaderReflection.cpp  ShaderReflection.h  ShaderUtils.cpp  ShaderUtils.h  Uniform.cpp  Uniform.h  UniformBuffer.cpp  UniformBuffer.h  UniformRegistry.cpp  UniformRegistry.h
State/: BindingState.cpp  BindingState.h  CMakeLists.txt  PipelineState.cpp  PipelineState.h  RenderingState.cpp  RenderingState.h  ShaderLayout.cpp  ShaderLayout.h
Texture/: CMakeLists.txt  PixelFormatGL.h  Texture.cpp  Texture.h  TextureType.cpp  TextureType.h  TextureUtils.cpp  TextureUtils.h
Vulkan/: CMakeLists.txt  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameContext.cpp  VulkanFrameContext.h  VulkanInstance.cpp  VulkanInstance.h
cmake/: FindGLESv2.cmake  FindGLImplementation.cmake
data/shader/: BRDF.glsl  Common.glsl  (+6 more)
doc/: Doxyfile
tests/: BufferObjectTest.cpp  BufferObjectTest.h  CMakeLists.txt  DeviceTest.cpp  DrawTest.cpp  DrawTest.h  FramebufferTest.cpp  OpenCLTest.cpp  OpenCLTest.h  RenderDeviceTest.cpp  RenderingContextTest.cpp  RenderingTestMain.cpp  ShaderTest.cpp  StateTest.cpp  StatisticsQueryTest.cpp  StatisticsQueryTest.h  TestUtils.h  VertexAccessorTest.cpp  VertexAccessorTest.h
